--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ title: Brian Murunga # the main title
 tagline: There is only one way to find out. # it will display as the subtitle
 
 description: >- # used by seo meta and the atom feed
-  My journey into Cyber Security.
+  blog, brian murunga, infosec, writeup, github.
 
 # Fill in the protocol & hostname for your site.
 # E.g. 'https://username.github.io', note that it does not end with a '/'.
